update of activity chapter.

--- a/activity.Rmd
+++ b/activity.Rmd
@@ -1,10 +1,5 @@
----
-output: html_document
-editor_options: 
-  chunk_output_type: console
----
-# Activity {#activity}
 
+# Activity {#activity}
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
 metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper,
@@ -14,16 +9,12 @@ sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu.
 Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla
 ut massa tempor, ac dapibus dui viverra [@Marszalek2014].  
 
-Donec sed lectus at sem ultrices commodo. Proin a viverra metus, nec scelerisque
-odio. Morbi viverra tristique libero vel fringilla. Sed at varius erat, id
-consequat nibh. Ut eget leo blandit orci posuere tincidunt ac sed erat. Aenean
-metus metus, eleifend ut facilisis a, fringilla ut neque. Nunc hendrerit
-cursus eleifend. Pellentesque habitant morbi tristique senectus et netus et
-malesuada fames ac turpis egestas. Vivamus enim turpis, pulvinar volutpat
-purus nec, lobortis imperdiet diam.
+Activity can be measured with accelerometers and GPS. We will discuss both in this chapter. 
 
 ## Accelerometry
 \index{Accelerometer} 
+
+Accelerometers are micro electro-mechanical systems (MEMS) that measure so-called 'proper' acceleration, typically simultanously on the vertical (Y), horizontal right-left (X) and horizontal front-back axis (Z). 
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
 metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper,
@@ -32,24 +23,9 @@ tortor interdum porta. Vestibulum hendrerit tempus condimentum. Donec a mollis
 sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu.
 Vestibulum id laoreet neque. 
 
-vertical (Y), horizontal right-left (X) and horizontal front-back axis (Z). 
+Figure \@ref(fig:genea-one-hour) shows one hour of data, collected from a wrist-worn GENEActive accelerometer. As can be seen, five sensors were simultanously providing data: three accelerometers (X, Y, Z), temperature and light. Data were sampled with a frequency of 30Hz (thirty measurements per second), but subsampled here to 0.1Hz (one measurement every 10 seconds) for practical reasons. If we would have plotted the data at 30hz, the plot would have included 108.000 data points. At 0.1Hz, this reduces to 3600 points. 
 
-Phasellus at ex velit. Vestibulum scelerisque nulla
-ut massa tempor, ac dapibus dui viverra.
-
-### Data collection
-Donec sed lectus at sem ultrices commodo. Proin a viverra metus, nec scelerisque
-odio. Morbi viverra tristique libero vel fringilla. Sed at varius erat, id
-consequat nibh. Ut eget leo blandit orci posuere tincidunt ac sed erat. Aenean
-metus metus, eleifend ut facilisis a, fringilla ut neque. Nunc hendrerit
-cursus eleifend. Pellentesque habitant morbi tristique senectus et netus et
-malesuada fames ac turpis egestas. Vivamus enim turpis, pulvinar volutpat
-purus nec, lobortis imperdiet diam. Donec sed lectus at sem ultrices commodo.
-Proin a viverra metus, nec scelerisque odio. Morbi viverra tristique libero vel
-fringilla. Sed at varius erat, id consequat nibh.
-
-
-```{r genea-one-hour, fig.asp = 0.75, fig.cap = "One hour of raw data collected with a wrist-worn GENEActive  accelerometer, sub-sampled to 10-seconds epochs (0.1 Hz)", echo = FALSE}
+```{r genea-one-hour, fig.asp = 0.75, fig.cap = "One hour of raw data collected with a wrist-worn GENEActive  accelerometer, sub-sampled to 10-second epochs (0.1 Hz)", echo = FALSE}
 # Plot one hour of accelerometer data.
 library(ggplot2)
 library(tidyr)
@@ -73,6 +49,12 @@ ggplot(d, aes(timestamp, value)) +
   facet_grid(rows = vars(sensor) , scales = "free_y")
 ```
 
+### Data collection
+Donec sed lectus at sem ultrices commodo. Proin a viverra metus, nec scelerisque
+odio. Morbi viverra tristique libero vel fringilla. Sed at varius erat, id
+consequat nibh. Ut eget leo blandit orci posuere tincidunt ac sed erat. Aenean
+metus metus, eleifend ut facilisis a, fringilla ut neque. 
+
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
 metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper,
 sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec
@@ -86,6 +68,8 @@ Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla
 ut massa tempor, ac dapibus dui viverra.  
 
 ### Data cleaning
+
+Raw accelerometer data need to be cleaned before analyses can be run. Typical data import work-flows include re-calibration (to reduce systematic measurement error), the detection of non-wear periods (to ensure that non-informative data are removed), and subsampling (to reduce analysis processing time) and filtering/aggregation (to smoothen the signal and reduce the impact of outliers, measurement error and occasional missing values). 
 
 Donec sed lectus at sem ultrices commodo. Proin a viverra metus, nec scelerisque
 odio. Morbi viverra tristique libero vel fringilla. Sed at varius erat, id
@@ -105,16 +89,15 @@ cursus eleifend. Pellentesque habitant morbi tristique senectus et netus et
 malesuada fames ac turpis egestas. Vivamus enim turpis, pulvinar volutpat
 purus nec, lobortis imperdiet diam.
 
-
-signal vector magnitude (svm):
+Several methods exists to combine the x, y, z measurements into a meaningful metric. Two popular metrics are the signal vector magnitude (SVM) and the Euclidian Norm minus one (ENMO). The two are closely related. SVM is the Euclidian distance:
 
 \begin{equation} \sqrt{x^2 + y^2 + z^2} \end{equation}
 
-
-Euclidian Norm minus one (ENMO): 
+ENMO is the corrected SVM: the 1g base acceleration that is measured when the device is at rest is subtracted. 
 
 \begin{equation} \sqrt{x^2 + y^2 + z^2} - g \end{equation}
 
+Validation studies suggest that ENMO should be the preferred metric in clinical research [@VanHeest2014, @VanHeest2015].  
 
 ```{r svm, out.width = "100%", fig.asp = 0.3, fig.cap = "One day of data of the two persons in the genea data set, summarised with ENMO, calculated from 15-minute epoch windows", echo = FALSE}
 # Plot signal vector magnitude.
@@ -138,28 +121,15 @@ ggplot(d, aes(epoch, svm)) +
 ```
 
 
-
 ### Analysis
 
-Donec sed lectus at sem ultrices commodo. Proin a viverra metus, nec scelerisque
-odio. Morbi viverra tristique libero vel fringilla. Sed at varius erat, id
-consequat nibh. Ut eget leo blandit orci posuere tincidunt ac sed erat. Aenean
-metus metus, eleifend ut facilisis a, fringilla ut neque. Nunc hendrerit
-cursus eleifend. Pellentesque habitant morbi tristique senectus et netus et
-malesuada fames ac turpis egestas. Vivamus enim turpis, pulvinar volutpat
-purus nec, lobortis imperdiet diam.
+Properties of the signals that are of interest are highly dependent on the focus of the study. Highly detailed analysis of local peaks in the signal might be needed, for instance to reveal an association between activity and reported events. But analyses can also be more global, for instance when accelerometer data are used to demonstrate circadian rhythms in activity.
 
-Donec sed lectus at sem ultrices commodo. Proin a viverra metus, nec scelerisque
-odio. Morbi viverra tristique libero vel fringilla. Sed at varius erat, id
-consequat nibh. Ut eget leo blandit orci posuere tincidunt ac sed erat. Aenean
-metus metus, eleifend ut facilisis a, fringilla ut neque. Nunc hendrerit
-cursus eleifend. Pellentesque habitant morbi tristique senectus et netus et
-malesuada fames ac turpis egestas. Vivamus enim turpis, pulvinar volutpat
-purus nec, lobortis imperdiet diam.
 
 
 ## Location analysis
 \index{GPS} \index{Longitude} \index{Latitude}
+
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
 metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper,
 sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec
@@ -168,19 +138,20 @@ sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu.
 Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla
 ut massa tempor, ac dapibus dui viverra.
 
+Latitude longitude.
+
 ### Global Positioning Systems (GPS)
 Donec sed lectus at sem ultrices commodo. Proin a viverra metus, nec scelerisque
 odio. Morbi viverra tristique libero vel fringilla. Sed at varius erat, id
 consequat nibh. Ut eget leo blandit orci posuere tincidunt ac sed erat. Aenean
 metus metus, eleifend ut facilisis a, fringilla ut neque. Nunc hendrerit
 cursus eleifend. Pellentesque habitant morbi tristique senectus et netus et
-malesuada fames ac turpis egestas. Vivamus enim turpis, pulvinar volutpat
-purus nec, lobortis imperdiet diam. Donec sed lectus at sem ultrices commodo.
-Proin a viverra metus, nec scelerisque odio. Morbi viverra tristique libero vel
-fringilla. Sed at varius erat, id consequat nibh.
+malesuada fames ac turpis egestas. 
+
+Figure \@ref(fig:fourweekgps) shows GPS-data of two people, collected over a period of four weeks, via the Google timeline smartphone app. Data can be found in the 'emaph' package. 
 
 
-```{r fig11b, fig.cap="Four-week Location history of two people, collected with Google Timeline", out.width = "100%", fig.asp = .4}
+```{r fourweekgps, fig.cap="Four-week Location history of two people, collected with Google Timeline", out.width = "100%", fig.asp = .4}
 # Four-week location history.
 library(emaph)
 library(ggplot2)
@@ -190,13 +161,15 @@ d <-  subset(locations,
               lon >=  4.80 & lon <=  5.00 &
               lat >= 52.25 & lat <= 52.50)
 
- ggplot(d, aes(lon, lat)) +
+ggplot(d, aes(lon, lat)) +
    geom_point(alpha = .1,  shape = 21, size = 3) +
    facet_wrap(~ id)
 ```
 
 
-### Features
+### Activity
+
+Raw GPS data reflect series of locations rather than activity. Measures of activity can be extracted from the raw series though. Table \@ref(tab:GPSfeatures) shows various measures used in a study of activity and mood, conducted by researchers of Northwestern University [@Saeb2015].
 
 Table: (\#tab:GPSfeatures) Features of a GPS data set [@Saeb2015].
 
@@ -204,9 +177,9 @@ Table: (\#tab:GPSfeatures) Features of a GPS data set [@Saeb2015].
 |:------------------|:--------------------------------------|:-----------------------------------------------|
 | Total Distance    | $$\sum(distance((lat_{t}, lon_{t}), (lat_{t-1}, lon_{t-1})$$ | Total distance between locations |
 | Location variance | $$\sigma_{lon}^2 + \sigma_{lat}^2$$   | Variability of location visits                 |
-| N Places          | k-means(loc, lat)                     | Location clusters                              |
-| Location Entropy  | $$-\sum_{i} p_i * log(p_i)$$          | Variability in location cluster visits         |        
-| Normalized Entropy| $$\sigma_{lon}^2 + \sigma_{lat}^2$$   | Entropy, controlled for number of clusters     |    
+| N Places          | k-means(loc, lat)                     | Number of Location clusters                    |
+| Location Entropy  | $$-\sum_{i} p_i * log(p_i)$$          | Variability in location cluster visits         |  
+| Normalized Entropy| $$\sigma_{lon}^2 + \sigma_{lat}^2$$   | Entropy, controlled for number of clusters     |
 | Home Stay         | $$Entropy  log(N)$$                   | Percentage of time spent at home               | 
 | Circadian         | lomb_scargle(lat / lon)               | Consistency of location schedule based on a    |
 | Movement          |                                       | 24-hour period.                                |
