--- a/book.bib
+++ b/book.bib
@@ -939,7 +939,7 @@ year = {1995}
 
 @Article{Marszalek2014,
   author  = {Marszalek, Jolanta and Morgulec-Adamowicz, Natalia and Rutkowska, Izabela and Kosmol, Andrzej and Marszalek, Jolanta and Morgulec-Adamowicz, Natalia and Rutkowska, Izabela and Kosmol, Andrzej},
-  title   = {{Using ecological momentary assessment to evaluate current physical activity, using ecological momentary assessment to evaluate current physical activity}},
+  title   = {{Using ecological momentary assessment to evaluate current physical activity}},
   journal = {BioMed Research International},
   year    = {2014},
   volume  = {2014,},
