text edits: activity

--- a/book.bib
+++ b/book.bib
@@ -13,8 +13,8 @@
   doi             = {10.1016/j.cpr.2012.05.007},
   mendeley-groups = {Reviews},
   pmid            = {22721999},
-  url             = {http://linkinghub.elsevier.com/retrieve/pii/S0272735812000712 http://www.ncbi.nlm.nih.gov/pubmed/22721999},
-}
+  url             = {http://linkinghub.elsevier.com/retrieve/pii/S0272735812000712 http://www.ncbi.nlm.nih.gov/pubmed/22721999}}
+  
 
 @article{allport1937,
   title={Personality: A psychological interpretation.},
@@ -563,6 +563,18 @@
   publisher={BioMed Central}
 }
 
+@misc{Feehan2018,
+  author = {Feehan, Lynne M. and Geldman, Jasmina and Sayre, Eric C. and Park, Chance and Ezzat, Allison M. and Yoo, Ju Young and Hamilton, Clayon B. and Li, Linda C.},
+  booktitle = {Journal of Medical Internet Research},
+  doi = {10.2196/10527},
+  issn = {14388871},
+  keywords = {Accuracy,Data accuracy,Distance,Energy expenditure,Energy metabolism,Fitbit,Fitness trackers,Review,Sleep,Steps,Systematic review,Time in activity,Wearable activity tracker},
+  pmid = {30093371},
+  title = {{Accuracy of fitbit devices: Systematic review and narrative syntheses of quantitative data}},
+  year = {2018}
+}
+
+
 @Book{FieldSPSS,
   title     = {Discovering Statistics Using IBM SPSS Statistics},
   publisher = {Sage Publications Ltd.},
@@ -582,6 +594,18 @@
   isbn         = {1446200469},
   howpublished = {Paperback},
   keywords     = {book, r, statistics},
+}
+
+
+@article{Gomersall2016,
+  doi = {10.2196/jmir.5531},
+  isbn = {1438-8871},
+  issn = {14388871},
+  journal = {Journal of Medical Internet Research},
+  keywords = {Accelerometry,Activity tracker,Fitbit,Jawbone,Physical activity,Sedentary behavior},
+  pmid = {27604226},
+  title = {{Estimating physical activity and sedentary behavior in a free-living context: A pragmatic comparison of consumer-based activity trackers and actigraph accelerometry}},
+  year = {2016}
 }
 
 
@@ -1228,6 +1252,17 @@ year = {1999}
   year = {2015}
 }
 
+@article{Saeb2017,
+  author = {Saeb, Sohrab and Lattie, Emily G and Kording, Konrad P and Mohr, David C},
+  doi = {10.2196/mhealth.7297},
+  isbn = {2291-5222},
+  issn = {2291-5222},
+  journal = {JMIR mHealth and uHealth},
+  pmid = {28798010},
+  title = {{Mobile Phone Detection of Semantic Location and Its Relationship to Depression and Anxiety}},
+  year = {2017}
+}
+
 
 @book{sander2009,
   title={Oxford companion to emotion and the affective sciences},
@@ -1513,6 +1548,13 @@ year = {1999}
   year = {2012}
 }
 
+@article{Saunders2016,
+ author = {Saunders, K. and Palmius, N. and de Vos, M. and Bilderbeck, A. and Geddes, J. and Goodwin, G.},
+ journal = {Bipolar Disorders},
+ title = {{Depression detection in bipolar disorder using geolocation data}},
+ year = {2016}
+}
+
 
 @article{Schuurman2015,
   title={Incorporating measurement error in n= 1 psychological autoregressive modeling},
@@ -1522,6 +1564,29 @@ year = {1999}
   pages={1038},
   year={2015},
   publisher={Frontiers}
+}
+
+@article{Tahmasian2013,
+  author = {Tahmasian, Masoud and Khazaie, Habibolah and Golshani, Sanobar and Avis, Kristin T.},
+  doi = {10.1007/s11920-013-0359-2},
+  isbn = {1192001303},
+  issn = {15233812},
+  journal = {Current Psychiatry Reports},
+  keywords = {Actigraphy,Assessment,Circadian rhythms,Diagnosis,Measurement,Motor activity,Movement,Neuropathology,Pharmacological interventions,Psychiatry,Psychosis,Schizophrenia,Sleep,Systematic review},
+  pmid = {23686258},
+  title = {{Clinical application of actigraphy in psychotic disorders: A systematic review}},
+  year = {2013}
+}
+
+@article{tomkiewicz2010global,
+  title={Global positioning system and associated technologies in animal behaviour and ecological research},
+  author={Tomkiewicz, Stanley M and Fuller, Mark R and Kie, John G and Bates, Kirk K},
+  journal={Philosophical Transactions of the Royal Society of London B: Biological Sciences},
+  volume={365},
+  number={1550},
+  pages={2163--2176},
+  year={2010},
+  publisher={The Royal Society}
 }
 
 
