--- a/activity.Rmd
+++ b/activity.Rmd
@@ -1,29 +1,17 @@
 
 # Activity {#activity}
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
-metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper,
-sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec
-tortor interdum porta. Vestibulum hendrerit tempus condimentum. Donec a mollis
-sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu.
-Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla
-ut massa tempor, ac dapibus dui viverra [@Marszalek2014].  
+The objective study of human physical activity is one of the exciting opportunities created by passive EMA [@Marszalek2014]. Through technological advances, we are now able to continuously monitor (in-)activity of participants in every-day life, with little to no participant burden. While questions remain with regard to the validity, reliability and clinical utility of passive EMA with regard to various aspects of activity, such as (disturbed) sleep, sedentary behavior, and energy expenditure [see, e.g., @Feehan2018, @Gomersall2016], an increasing number of mental health studies are including activity tracking devices to study sleep habits and circadian rhythm disorders [see, e.g., @Saeb2015, @Saunders2016, @Tahmasian2013].
 
-Activity can be measured with accelerometers and GPS. We will discuss both in this chapter. 
+In this chapter, we will discuss two passive EMA methods to assess physical activity: actigraphy and geotracking. Of these two, actigraphy has been used most in human clinical research. However, due to the massive adoption of smartphones, researchers increasingly collect geolocation data as well, inspired perhaps by the elaborate geolocation data analysis techniques that have been developed in the past decades in wildlife telemetry research [@tomkiewicz2010global].
 
-## Accelerometry
+## Actigraphy
+\index{Actigraphy} 
 \index{Accelerometer} 
 
-Accelerometers are micro electro-mechanical systems (MEMS) that measure so-called 'proper' acceleration, typically simultanously on the vertical (Y), horizontal right-left (X) and horizontal front-back axis (Z). 
+Accelerometers are micro electro-mechanical systems (MEMS) that measure changes in velocity, typically simultanously on the vertical (Y), horizontal right-left (X) and horizontal front-back axis (Z). Through actigraphy, we can study the frequency, duration, and intensity of physical activity. 
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
-metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper,
-sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec
-tortor interdum porta. Vestibulum hendrerit tempus condimentum. Donec a mollis
-sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu.
-Vestibulum id laoreet neque. 
-
-Figure \@ref(fig:genea-one-hour) shows one hour of data, collected from a wrist-worn GENEActive accelerometer. As can be seen, five sensors were simultanously providing data: three accelerometers (X, Y, Z), temperature and light. Data were sampled with a frequency of 30Hz (thirty measurements per second), but subsampled here to 0.1Hz (one measurement every 10 seconds) for practical reasons. If we would have plotted the data at 30hz, the plot would have included 108.000 data points. At 0.1Hz, this reduces to 3600 points. 
+Figure \@ref(fig:genea-one-hour) shows one hour of data collected from a wrist-worn GENEActive accelerometer. As can be seen, five sensors were simultanously providing data: three accelerometers (X, Y, Z), temperature and light. Data were sampled with a frequency of 30Hz (thirty measurements per second), but subsampled here to 0.1Hz (one measurement every 10 seconds) for practical reasons. If we would have plotted the data at 30hz, the plot would have included 108.000 data points. At 0.1Hz, this reduces to 3600 points. 
 
 ```{r genea-one-hour, fig.asp = 0.75, fig.cap = "One hour of raw data collected with a wrist-worn GENEActive  accelerometer, sub-sampled to 10-second epochs (0.1 Hz)", echo = FALSE}
 # Plot one hour of accelerometer data.
@@ -77,7 +65,7 @@ consequat nibh. Ut eget leo blandit orci posuere tincidunt ac sed erat. Aenean
 metus metus, eleifend ut facilisis a, fringilla ut neque. Nunc hendrerit
 cursus eleifend. Pellentesque habitant morbi tristique senectus et netus et
 malesuada fames ac turpis egestas. Vivamus enim turpis, pulvinar volutpat
-purus nec, lobortis imperdiet diam [@VanHeest2014, @VanHeest2015].
+purus nec, lobortis imperdiet diam.
 
 ### Feature extraction
 
@@ -127,7 +115,7 @@ Properties of the signals that are of interest are highly dependent on the focus
 
 
 
-## Location analysis
+## Geotracking
 \index{GPS} \index{Longitude} \index{Latitude}
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
@@ -138,9 +126,18 @@ sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu.
 Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla
 ut massa tempor, ac dapibus dui viverra.
 
-Latitude longitude.
+```{r longlat, echo = FALSE, fig.cap = "Longtitude and latitude of the Earth", out.width = '75%', fig.align = 'center', fig.show = 'hold', fig.pos = "!h"}
+knitr::include_graphics(c(
+   "images/activity/Latitude_and_Longitude_of_the_Earth.png"))
+```
 
-### Global Positioning Systems (GPS)
+### Global Positioning System (GPS)
+\index{GPS} \index{Longitude} \index{Latitude}
+
+Geotracking is enabled by the Global Positioning System (GPS).
+
+
+
 Donec sed lectus at sem ultrices commodo. Proin a viverra metus, nec scelerisque
 odio. Morbi viverra tristique libero vel fringilla. Sed at varius erat, id
 consequat nibh. Ut eget leo blandit orci posuere tincidunt ac sed erat. Aenean
@@ -167,20 +164,21 @@ ggplot(d, aes(lon, lat)) +
 ```
 
 
-### Activity
+### Geodata activity measures
 
-Raw GPS data reflect series of locations rather than activity. Measures of activity can be extracted from the raw series though. Table \@ref(tab:GPSfeatures) shows various measures used in a study of activity and mood, conducted by researchers of Northwestern University [@Saeb2015].
+Raw GPS data reflect series of locations rather than activity per se. However, measures of activity can be extracted from the raw series. Table \@ref(tab:GPSfeatures) shows various derived measures that were used in a small (n = 28) study of activity and depression, conducted by researchers of Northwestern University [@Saeb2015]. Circadian movement, normalized entropy, and location variance were found to be correlated to PHQ-9 scores (-.63 < r < -.58). 
 
-Table: (\#tab:GPSfeatures) Features of a GPS data set [@Saeb2015].
+Table: (\#tab:GPSfeatures) Features extracted from a GPS data set [@Saeb2015].
 
-| **Name**           | **Formula**                            | **Description**                            | 
-|:------------------|:--------------------------------------|:-----------------------------------------------|
+| **Name**           | **Formula**                               | **Description**                                | 
+|:------------------|:-------------------------------------------|:-----------------------------------------------|
 | Total Distance    | $$\sum(distance((lat_{t}, lon_{t}), (lat_{t-1}, lon_{t-1})$$ | Total distance between locations |
-| Location variance | $$\sigma_{lon}^2 + \sigma_{lat}^2$$   | Variability of location visits                 |
-| N Places          | k-means(loc, lat)                     | Number of Location clusters                    |
-| Location Entropy  | $$-\sum_{i} p_i * log(p_i)$$          | Variability in location cluster visits         |  
-| Normalized Entropy| $$\sigma_{lon}^2 + \sigma_{lat}^2$$   | Entropy, controlled for number of clusters     |
-| Home Stay         | $$Entropy  log(N)$$                   | Percentage of time spent at home               | 
-| Circadian         | lomb_scargle(lat / lon)               | Consistency of location schedule based on a    |
-| Movement          |                                       | 24-hour period.                                |
+| Location variance | $$log(\sigma_{lon}^2 + \sigma_{lat}^2)$$   | Variability of location visits                     |
+| N Places          | k-means(loc, lat)                          | Number of Location clusters                        |
+| Home Stay         | time(cluster[home]) / time(clusters[j])    | Percentage of time spent at home (defined as a     |
+|                   |                                            | top 3 cluster which was most visited between       |
+|                   |                                            | 24:00 and 6:00)                                    | 
+| Circadian         | $$\sum(psd(f_i) / (i1 - i2)$$              | Consistency of location schedule based on a        |
+| Movement          |                                            | 24-hour period (i1 = 24.5; i2 = 23.5).             |
 
+psd: power spectral density (of the Lomb-Scargle periodogram) - see Chapter \@ref(rcat)) 
