Temstem: approved. Removed Vumc/ggz ingeest (only participated as recruitment center).

--- a/aph-catalogue.Rmd
+++ b/aph-catalogue.Rmd
@@ -220,7 +220,7 @@ Table: (\#tab:APHresearch) Overview of EMA research in the APH MH consortium.
 | **Aspect**       | **Description**                                              | 
 |:-----------------|:-------------------------------------------------------------|
 | **Team** | Mark van der Gaag, PhD, Alyssa Jongeneel, MSc, David van den Berg, PhD, Dorien Scheffers, MSc |
-| **APH site** | Vrije Universiteit Amsterdam, VUmc, GGZ inGeest, Parnassia Psychiatric Institute
+| **APH site** | Vrije Universiteit Amsterdam, Parnassia Psychiatric Institute
 | **Project** | The TemStem project focusses on people who suffer from hearing voices and are obstructed by them in their daily life. Study participants install an app that contains both an EMI and EMA function, which is designed to reduce distress and dysfunction caused by auditory verbal hallucinations [@jongeneel2018]. Components of the app include 1) coping: addressing verbal working memory phonological loop with a language task, thereby blocking the hearing of voices, 2) positive reinforcement: decreasing self-reported negative self-esteem themes, 3) treatment: reducing emotional response to memories associated with voices by taxing the auditory working memory during recall of negative auditory memories (as in EMDR therapy). The TemStem study aims to explore the effect of the app on distress and dysfunction in an RCT, specifically with regard to the effect of TemStem on frequency and severity of AVH. Additional analyses will focus on the identification of working mechanisms (predictors and mediators of effects), and the usability of TemStem.|
 | **EMA measures** | TemStem users are encouraged to fill-in nine self-report items on a daily basis. Items tap: 1) hearing voices: 6 items (e.g. "Today, the voices were disturbing"), 2) mood, 3) self-esteem, 4) the use of TemStem ("I used TemStem today"). Items, which are rated on a 7-point Likert-scale, are based on existing EMA questionnaires. Results are presented to users in separate graphs, to support users in gaining insight in the pattern of AVH over time, or after use of Temstem. Stored variables include scores of vividness of AVH pre and post use of TemStem, data on application use (duration), used function (e.g. 'Silencing' function which focuses on coping, or 'Challenging' function which is based on dual tasking), and how users feel when they hear voices. Users can choose to provide additional information on age, gender, which county in the Netherlands they are currently located, how they found the app, and why they want to use it |
 | **Platform used** | The TemStem app was developed by Reframing Studio, in collaboration with Parnassia Psychiatric Institute and TU Delft. The app is available for IOS and Android. |
