Add martijn spruit PI FAntasTIQUE

--- a/aph-catalogue.Rmd
+++ b/aph-catalogue.Rmd
@@ -52,7 +52,7 @@ Table: (\#tab:APHresearch) Overview of EMA research in the APH MH consortium.
 | **EMA Measures**     | In the IYM RCT, EMA items included mood, positive affect (PA, 5 items), negative affect (NA, 9 items) and mental imagery (2 items). Participants were prompted 10 times per day, 3 days a week, over a period of 8 weeks. Prompts were sent randomly within fixed time-intervals.  The VAS mood scale used (*‘Please rate your current mood on a scale of 0 to 100’*, on which 0 indicates ‘happy’, and 100 indicates ‘sad’), was shown to have a high positive predictive value without any false negatives at a cut-off score of 55 [@Vanrijsbergen2014]. Compared to the HAM-D17 and the IDS-SR, the VAS also was a better predictor of current relapse status, as measured by the SCID-1 interview (variance explained for VAS: 60%; HAM-D17: 49%; IDS-SR: 34%). 
 |                      | | 
 |                      | In the STAY-FINE RCT, The aim is to test whether EMA +  EMI is more effective in preventing relapse in comparison to EMA alone. Structured clinical interviews will be conducted to assess the clinical status of participants. EMA will be used to monitor outcomes (for three weeks) at six assessment periods (between baseline and 36-month follow-up), in N = 212 participants. Polar watches will be used to collect passive activity measurement data. Prior to the main study, a feasibility study of the app will be conducted. |
-| **Platforms used**   | Psymate, Roqua (See also Chapter \@ref(ema-instruments-catalogue)), ‘Imagine your mood’ app & STAY-FINE app (custom development), Polar watches (http://www.polar.com/nl)|
+| **Platforms used**   | Psymate, Roqua (See also Chapter \@ref(ema-instruments-catalogue)), ‘Imagine your mood’ app & STAY-FINE app (custom development), Polar watches (http://www.polar.com/nl).|
 | **Contact**          | http://www.amc.nl/web/research-75/person-1/prof.-dr.-c.l.h.-bockting-phd.htm
 |                      | http://claudibockting.com |
 |                      | http://stayfine.nl/ |
@@ -75,7 +75,7 @@ Table: (\#tab:APHresearch) Overview of EMA research in the APH MH consortium.
 | **Project(s)**   | The main aim of NESDA (the Netherlands study of Depression and Anxiety) is to examine the long-term (eight-year) course and prognosis and co-morbidity of anxiety and depression, to improve quality of care and prevent chronicity [@Penninx2008]. Within the Wave 6 9-year follow-up of the NESDA study (2015 - 2017), a selected sample of NESDA participants with symptoms of depression and healthy controls (n = 384) was invited for an EMA diary/actigraphy study. |
 | **EMA measures** | NESDA EMA study data were collected to explore the dynamic interplay between cognitions, emotions, behavior and environment in daily life of individuals, the feasibility of EMA in participants with affective disorders, and chronotype and diurnal patterns of activity in depressed versus non-depressed participants. EMA participants started within 31 days after the regular NESDA assessments (face-to-face interview and self-report measures). Participants could use their own smartphone (Android / IPhone) if they had sufficient data or access to WIFI for at least 80% of the two-week time period, and could borrow a phone if needed. To record the amount of physical activity during EMA monitoring, participants were also asked to wear an accelerometer (GENEActiv, 30Hz) on their non-dominant wrist, 24 hours a day, for two weeks. Recording started on the evening prior to the first EMA assessment and continued until the morning after the last assessment.|
 |               | Participants were prompted five times a day to complete a self-report questionnaire comprising ~30 items. Items (7-point Likert scale, ranging from 'not [at all]' to 'very') tapped 1) Valance (unpleasant to pleasant) and Arousal (calm to excited), 2) Current state, symptoms of Depression/Anxiety, Physical Condition, 3) Social context, 4) Sleep, 5) daily uplifts/hassles, 6) Activities, and 7) Substance use. Examples of items were: *"I feel down"*, *"I feel cheerful"* and *"Where are you now"* (e.g. at the neighbor's house). In addition, there was an additiona questionnaire inquiring about questionnaire burden and an open-ended question for general comments on circumstances that might influence answers. The items on Valance, Arousal and Current State have been used in a previous study; the Uncovering the Positive Potential of Emotional Reactivity (UPPER) study (@Bennik2015). The other items are based on items from earlier EMA studies, such as the work by Mehl and colleagues (@Mehl2012), van Os and colleagues (@Wichers2012) and studies performed at the Interdisciplinary Center of Psychopathology and Emotion regulation (ICPE), such as the Mood and Movement in Daily life (MOOVD) study (@Booij2015) |
-| **Platform used** | RoQua (http://www.roqua.nl/), GENEActiv accelerometer. See also Chapter \@ref(ema-instruments-catalogue)) |
+| **Platform used** | RoQua (http://www.roqua.nl/), GENEActiv accelerometer. See also Chapter \@ref(ema-instruments-catalogue)). |
 | **Contact Information** | http://research.vumc.nl/en/persons/brenda-penninx |
 |                         | http://research.vumc.nl/en/persons/femke-lamers   |
 |                         | http://www.nesda.nl/ |
@@ -112,7 +112,7 @@ Table: (\#tab:APHresearch) Overview of EMA research in the APH MH consortium.
 | **Project(s)**    | Moodbuster was developed in the European FP7 project “ICT4Depression” (@warmerdam2012; http://www.ict4depression.eu/), and applied in the Horizon 2020 FP7 EU-project “European COMPARative Effectiveness research on blended Depression treatment versus treatment-as-usual” (E-COMPARED; @Kleiboer2016; @kemmeren2016; http://www.e-compared.eu/), Moodbuster will also be used in the EU ImpleMentAll project (http://www.implementall.eu) and in several other clinical trials that are currently (October 2018) in preparation. |
 | **EMA measures**  | In the ICT4Depression project, the Moodbuster platform included a complex set of active and passive EMA measures, including physiological sensors, accelerometers, wearables to measure sympathetic nervous system responses (chest strap and glove), and an Android EMA smartphone app. |
 |                   | For the E-COMPARED study, the Moodbuster website and smartphone app were adapted to deliver (blended) treatment to patients with MDD, in 5 routine practice settings across Europe. A therapist portal was added, in order to allow therapists to monitor patients’ progress and send feedback messages. Smartphone-based EMA was used to asses sleep, mood, worrying, self-esteem, activities (2 items) and social contacts. Prompts were sent at a random time point between 10:00 and 22:00. At the beginning and during the final phase of treatment, patients received two additional prompts per day for one week. In the morning (around 10:00), sleep, worrying and self-esteem items were assessed. In the evening (around 22:00), these questions were repeated, along with the activity and social interaction items. Patients rated these EMA items on a visual analogue scale, ranging from 0 (low) to 10 (high). EMA data were used in several machine learning projects [@mikus2018; @rocha2018; @VanBreda2018; @VandeVen2017]. |
-| **Platform used** | Moodbuster (http://www.moodbuster.eu; see also Chapter \@ref(ema-instruments-catalogue))) |
+| **Platform used** | Moodbuster (http://www.moodbuster.eu; see also Chapter \@ref(ema-instruments-catalogue))). |
 | **Contact**       | http://research.vu.nl/en/persons/heleen-riper | 
 |                   | http://research.vumc.nl/en/persons/jan-smit |
 |                   | http://research.vumc.nl/en/persons/lise-kemmeren |
@@ -149,11 +149,11 @@ Table: (\#tab:APHresearch) Overview of EMA research in the APH MH consortium.
 
 | **Aspect**       | **Description**                                              | 
 |:-----------------|:-------------------------------------------------------------|
-| **Project team** | Mirjam Sprangers, PhD, in collaboration with Yvonne Goërtz, MSc; Zjala Ebadi (from July 2018), MSc, Melissa Thong, PhD, Daisy Janssen, MD, PhD, Jeanette Peters, PhD, Jan Vercoulen, PhD, Chris Burtin, MSc, Yvonne Meertens-Kerris, Arnold Coors, Jean Muris, MD, PhD, Emiel Wouters, MD, PhD, Judith Prins, PhD, and Martijn Spruit, PhD |
+| **Project team** | Mirjam Sprangers, PhD, in collaboration with Martijn Spruit, PhD (PI); Yvonne Goërtz, MSc; Zjala Ebadi (from July 2018), MSc, Melissa Thong, PhD, Daisy Janssen, MD, PhD, Jeanette Peters, PhD, Jan Vercoulen, PhD, Chris Burtin, MSc, Yvonne Meertens-Kerris, Arnold Coors, Jean Muris, MD, PhD, Emiel Wouters, MD, PhD, Judith Prins, PhD, and Martijn Spruit, PhD |
 | **APH site**| AMC (in collaboration with Ciro-Horn, Maastricht UMC, Radboud UMC, and Hasselt University) |
 | **Project goals**| The FAntasTIGUE study examines fatigue in patients with chronic obstructive pulmonary disease (COPD; n = 400), by evaluating the course of fatigue, precipitating/perpetuating factors and hospitalization. A secondary aim is to identify diurnal fluctuations in fatigue, by using EMA in a sub-sample of participants (n = 40) [@Goertz2018].|
 | **EMA measure**s | The project comprises four data collection periods (baseline, and 4, 8, and 12-month follow-up). During data collection periods, patients are provided with iPods, on which an EMA application will be pre-installed. Participants will be prompted 8 times a day, at random moments between 7:30 and 22:30, for 5 consecutive days, to answer 19 items (including nine contextual items). Measured concepts include fatigue, relaxed feeling, breathlessness, agitation, uncertainty, irritation, satisfaction, anxiety, feeling energetic, and feeling mentally fit. Items are rated on a 7-point Likert-scale, ranging from ‘Not at all’ to ‘Very much’. In addition, participants are asked to complete a morning questionnaire soon after they awaken to assess the quality of their sleep the previous night. Participants also complete an evening questionnaire, assessing the general perception of their day just before going to bed. During the EMA data collection period, patients will also be asked to wear an actigraph (activity monitor), 24 hours a day, for one week. |
-| **Platform used**| Psymate (http://psymate.eu; see Chapter \@ref(ema-instruments-catalogue)) |
+| **Platform used**| Psymate (http://psymate.eu; see Chapter \@ref(ema-instruments-catalogue)). |
 | **Contact**      | http://www.amc.nl/web/research-75/publications/prof.-dr.-m.a.g.-sprangers-publications.htm |
 
 #### IMPACT
@@ -182,7 +182,7 @@ Table: (\#tab:APHresearch) Overview of EMA research in the APH MH consortium.
 | **APH site** | VUmc, AMC |
 | **Project**      | In the MERITS study ('Momentary assessment of patient Experiences in Real life of Insulin Glargine 300 in Type 1 diabetes'), Snoek an co-workers use EMA to explorer whether a) blood glucose variability is associated with changes in wellbeing (mood / energy) during waking time, whether b)  switching to U-300 results in less glucose variability and translates into improved mood over time within patients, and whether c) if individual differences (profiles) can be distinguished with regard to the (strength of the) association between glucose variability and changes in mood. 
 | **EMA measures** | Adult patients (N = 70) with type 1 diabetes, will be (randomly) prompted to answer questions on mood (based on POMS questionnaire), diabetes distress, fear of hypoglycemia and sleep. 
-| **Platform used**| Ilumivu (http://ilumivu.com, see also Chapter \@ref(ema-instruments-catalogue)) |
+| **Platform used**| Ilumivu (http://ilumivu.com, see also Chapter \@ref(ema-instruments-catalogue)). |
 | **Contact**      | http://research.vumc.nl/en/persons/frank-snoek |
 |                  | http://research.vumc.nl/en/persons/maartje-de-wit |
 
@@ -201,7 +201,7 @@ Table: (\#tab:APHresearch) Overview of EMA research in the APH MH consortium.
 | **APH site** | VU, VUmc, GGZ inGeest |
 | **Project**      |  The 'Continuous Assessment for Suicide Prevention And Research' (CASPAR) study ([@Nuij2018) aims to evaluate the feasibility of mobile safety planning and daily mobile self-monitoring in routine care treatment for patients with major depression or dysthymia and suicide risk in mental health care. Feasibility will be operationalized in terms of uptake, usage, acceptability, usability and patient satisfaction. EMA data will be used to: (a) empirically validate hypothesized psychological processes and stages of suicide pathways, (b) identify individual pathways to suicidal behavior, and (c) profile (sub)types of suicidality. The project is expected to result in 1) an interactive smartphone-based safety plan that patients can access 24/7, 2) increased disease awareness of patients due to self-monitoring, and 3) input for the national and international field of mental health care by sharing our results and our data, ultimately contributing to more personalized interventions according to precision medicine principles, and more effective suicide prevention. |
 | **EMA measures** | In the project, adult suicidal patients (N = 80) with major depression or dysthymia and suicide risk in mental health care will be prompted, three times a day, to answer eight self-report items (e.g. 'I feel sad') assessing mood, rumination, hopelessness, defeat, entrapment, burdensomeness, belongingness, impulsiveness, suicidal imagery and suicidal ideation. Items, which are based on existing questionnaires, such as the Patient Health Questionnaire (PHQ-9), are rated on a 7-point Likert-scale, ranging from 'Not at all' to 'Very much'. Results are presented to patients in graphs, which patients encouraged to discuss with their clinicians. In addition to active EMA data, location data are also gathered to assess movement patterns and daily rhythms. Planned variables also include accelerometer data and smartphone usage patterns. These data are not visible to study participants. |
-| **Platform used**| Ilumivu (http://ilumivu.com, see Chapter \@ref(ema-instruments-catalogue)) |
+| **Platform used**| Ilumivu (http://ilumivu.com, see Chapter \@ref(ema-instruments-catalogue)). |
 | **Contact**      | http://research.vu.nl/en/persons/wouter-van-ballegooijen |
 |                     | http://research.vu.nl/en/persons/chani-nuij |
 
@@ -280,7 +280,7 @@ Table: (\#tab:APHresearch) Overview of EMA research in the APH MH consortium.
 |         | 2)	Ambulatory study on self-regulation among youth (Tjew A Sin et al., 2018-2019). This study is conducted at the schools as part of the NeuroLab project. A total of 50 students, will wear the VU-AMS device for approximately 22 hours. Autonomic nervous system activity is collected continuously over the course of a regular school day (including the night and morning thereafter) and will be related to multiple components of self-regulation, including emotion-regulation, cognitive functioning, impulsivity and inhibition  |
 | **EMA measures** | The VU-AMS device is a battery powered wearable that can record up to 48 hours of data (4GB storage). It measures the electrocardiogram, the impedance cardiogram, and skin conductance. With VU-AMS, the following outcomes can be collected: Heart Rate / Inter beat Interval (IBI), Heart Rate Variability (SDNN, RMSSD, IBI power spectrum: HF, LF), Respiratory Sinus Arrhythmia (RSA), Pre-Ejection Period (PEP), T-wave amplitude (TWA), Left Ventricular Ejection Time (LVET), Stroke Volume (SV) and Cardiac Output (CO), Respiration Rate (RR), Skin Conductance Level (SCL) and Skin Conductance Responses (SCRs), Movement (Hip-worn tri-axial accelerometer signals (g). |
 |                 | The freely available 'Data Analysis and Management System' (DAMS) package is used for extraction and processing of VU-AMS data (http://www.vu-ams.nl/support/downloads/software/). The DAMS tool offers options for data inspection (visual inspection of raw data), automated detection of R-peaks in raw ECG signal and visual inspection of final IBI time series, event/diary-based data labeling, IBI spectral power calculation, automated scoring of RR, RSA, and PEP from the combined ECG. 
-| **Platform(s) used** | VU-AMS / DAMS (see Chapter \@ref(ema-instruments-catalogue)|  
+| **Platform(s) used** | VU-AMS / DAMS (see Chapter \@ref(ema-instruments-catalogue).|  
 | **Contact** | http://research.vu.nl/en/persons/jcn-de-geus |
 |             | http://research.vu.nl/en/persons/ahm-willemsen | 
 |             | http://research.vu.nl/en/persons/martin-gevonden |
